--- a/KaggleBreastCancerLR.ipynb
+++ b/KaggleBreastCancerLR.ipynb
@@ -1343,7 +1343,7 @@
         "outputId": "4da8ab18-ba55-4021-def7-0e4f15aa21ac"
       },
       "source": [
-        "LABELS = ['Malignant', 'Benign']\n",
+        "LABELS = ['Benign', 'Malignant']\n",
         "conf_matrix = confusion_matrix(y_test, yPred)\n",
         "plt.figure(figsize =(12, 6))\n",
         "sns.heatmap(conf_matrix, xticklabels = LABELS, \n",
